<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Greeter
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="hello_world" >Hello world!
    </string>
    <string name="greetToWorld">Greet to World</string>
    <string name="greetToPerson">Greet to Person</string>
    <string name="greeting">Greeting</string>
    <string name="personName">Enter person\'s name</string>
    <string name="serverGreets">Greeting from Server</string>
    <string name="helloWorldImage">Hello World Image</string>
    <string name="sumeet">Sumeet</string>

</resources>
