<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greetToWorld"
            android:id="@id/greetToWorld"
            android:onClick="greetToWorld"
            android:layout_gravity="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greetToPerson"
                android:id="@id/greetToPerson"
                android:onClick="greetToPerson"
                android:layout_gravity="center"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@id/personName"
                android:hint="@string/personName"
                android:text="@string/sumeet"
                android:gravity="center_vertical|center_horizontal"/>
    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serverGreets"
            android:id="@id/serverGreet"
            android:onClick="serverGreet"
            android:layout_gravity="center"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helloWorldImage"
            android:id="@id/buttonImage"
            android:onClick="helloWorldImage"
            android:layout_gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@id/greeting"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:hint="@string/greeting"
            android:layout_marginBottom="10dp"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitXY"/>

</LinearLayout>